fixed map overlaping content + new alignemnt

--- a/app/public/style/styles.css
+++ b/app/public/style/styles.css
@@ -200,20 +200,24 @@ main h2 {
 
 .subGrid {
    display: grid;
-   grid-template-columns: repeat(8,1fr);
+   grid-template-columns: repeat(16,1fr);
    margin-bottom: 50px;
 }
 
 .mapsFrame {
-   grid-column: 1/5;
-   margin-left: 60px;
+   grid-column: 2/16;
+   display: flex;
+   justify-content: center;
+   flex-wrap: wrap;
+}
+
+.mapsFrame h4 {
+   font-family: CircularStd-Light;
+   font-size: 1.6em;
 }
 
 .sideContent {
-   grid-column: 5/9;
-   margin-right: 60px;
-   margin-left: 135px;
-   
+   grid-column: 2/16;
    display: flex;
    justify-content: space-evenly;
 }
@@ -244,15 +248,17 @@ main h2 {
 }
 
 #findUsHeading {
-   margin-right: 60px;
-   margin-left: 60px;
+   grid-column: 2/16;
+   padding: 30px 0px 30px 0px;
+   display: flex;
+   justify-content: center;
 }
 
 #map {
    border-style: solid;
    border-width: 2px;
-   height: 500px;
-   width: 800px;
+   height: 48em;
+   width: 80em;
 }
 
 #contactContainer div p {
